fix: wrong padding unit

--- a/src/common.css
+++ b/src/common.css
@@ -103,7 +103,7 @@ p {
   max-width: 60ch;
   margin: 0 auto;
   padding: 0 2rem;
-  padding-left: 5rem;
+  padding-left: 2svw;
 }
 
 html {
